resolve socket io

--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
         integrity="sha512-9mpsATI0KClwt+xVZfbcf2lJ8IFBAwsubJ6mI3rtULwyM3fBmQFzj0It4tGqxLOGQwGfJdk/G+fANnxfq9/cew=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script>
-        const socket = io('http://localhost:8080');
+        /* const socket = io('http://localhost:8080');
         //referencias al html
         const formulario = document.querySelector('#miFormulario');
         const mensajes = document.querySelector('#misMensajes');
@@ -66,7 +66,7 @@
             mensajes.innerHTML += `<li>${data.texto}</li>`
 
             console.log(data)
-        })
+        }) */
        /*  socket.on("mensaje-bienvenida", (data) => {
                      console.log("el servidor emitio algo", data)
                  });
